chore(package): update package details and dependencies
- Update package name to `@tsdevau/catppuccin-vscode`
- Update repository and issue URLs to tsdevau organisation
- Remove sponsor configuration
- Update package paths in scripts
- Remove husky dependency and related postinstall script

--- a/package.json
+++ b/package.json
@@ -1,26 +1,23 @@
 {
-  "name": "@catppuccin/vscode-monorepo",
+  "name": "@tsdevau/catppuccin-vscode",
   "private": true,
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/catppuccin/vscode.git",
+    "url": "https://github.com/tsdevau/catppuccin-vscode.git",
     "directory": "."
   },
   "bugs": {
-    "url": "https://github.com/catppuccin/vscode/issues"
-  },
-  "sponsor": {
-    "url": "https://opencollective.com/catppuccin"
+    "url": "https://github.com/tsdevau/catppuccin-vscode/issues"
   },
   "lint-staged": {
     "*.ts": "pnpm eslint --cache --fix",
     "*.{ts,json,md}": "pnpm prettier --write"
   },
   "scripts": {
-    "g:typecheck": "tsc --noEmit -p packages/catppuccin-vsc && tsc --noEmit -p packages/catppuccin-vsc-storybook",
+    "g:typecheck": "tsc --noEmit -p packages/tsdevau-catppuccin-vsc && tsc --noEmit -p packages/tsdevau-catppuccin-vsc-storybook",
     "lint": "eslint . --ext .ts \"$@\" && pnpm g:typecheck",
-    "postinstall": "husky && pnpm --filter @catppuccin/vscode compiled:pack"
+    "postinstall": "pnpm --filter tsdevau-catppuccin-vscode compiled:pack"
   },
   "packageManager": "pnpm@10.7.0",
   "engines": {
@@ -32,7 +29,6 @@
     "eslint-config-prettier": "^10.0.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-unicorn": "^52.0.0",
-    "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
     "@tsconfig/node22": "catalog:",
