--- a/packages/catppuccin-vsc/package.json
+++ b/packages/catppuccin-vsc/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "catppuccin-vsc",
+  "name": "tsdevau-catppuccin-vsc",
   "license": "MIT",
   "private": true,
-  "displayName": "Catppuccin for VSCode",
-  "publisher": "Catppuccin",
-  "description": "🦌 Soothing pastel theme for VSCode",
+  "displayName": "tsdevau-Catppuccin for VSCode",
+  "publisher": "tsdevau",
+  "description": "Soothing pastel theme based on Catppuccin with adjusted syntax highlighting for VSCode",
   "version": "3.17.0",
   "type": "module",
   "engines": {
@@ -32,28 +32,28 @@
   "contributes": {
     "themes": [
       {
-        "label": "Catppuccin Mocha",
+        "label": "tsdevau-Catppuccin Mocha",
         "uiTheme": "vs-dark",
         "path": "./themes/mocha.json"
       },
       {
-        "label": "Catppuccin Macchiato",
+        "label": "tsdevau-Catppuccin Macchiato",
         "uiTheme": "vs-dark",
         "path": "./themes/macchiato.json"
       },
       {
-        "label": "Catppuccin Frappé",
+        "label": "tsdevau-Catppuccin Frappé",
         "uiTheme": "vs-dark",
         "path": "./themes/frappe.json"
       },
       {
-        "label": "Catppuccin Latte",
+        "label": "tsdevau-Catppuccin Latte",
         "uiTheme": "vs",
         "path": "./themes/latte.json"
       }
     ],
     "configuration": {
-      "title": "Catppuccin",
+      "title": "tsdevau-Catppuccin",
       "properties": {
         "catppuccin.boldKeywords": {
           "scope": "application",
@@ -160,20 +160,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/catppuccin/vscode.git",
-    "directory": "packages/catppuccin-vsc"
+    "url": "https://github.com/tsdevau/catppuccin-vscode.git",
+    "directory": "packages/tsdevau-catppuccin-vsc"
   },
   "bugs": {
-    "url": "https://github.com/catppuccin/vscode/issues"
-  },
-  "sponsor": {
-    "url": "https://opencollective.com/catppuccin"
+    "url": "https://github.com/tsdevau/catppuccin-vscode/issues"
   },
   "icon": "icon.png",
   "__metadata": {
-    "publisherDisplayName": "Catppuccin",
-    "publisherId": "e7d2ed61-53e0-4dd4-afbe-f536c3bb4316",
-    "id": "69264e4d-cd3b-468a-8f2b-e69673c7d864",
+    "publisherDisplayName": "tsdevau",
     "isPreReleaseVersion": false
   },
   "devDependencies": {
@@ -197,5 +192,5 @@
     "core:watch": "tsx watch build.ts --dev",
     "schema:ui": "tsx src/hooks/updateSchemas.ts"
   },
-  "homepage": "https://github.com/catppuccin/vscode/tree/main/packages/catppuccin-vsc#readme"
+  "homepage": "https://github.com/tsdevau/catppuccin-vscode#readme"
 }
