--- a/packages/tsdevau-catppuccin-vscode/tsconfig.json
+++ b/packages/tsdevau-catppuccin-vscode/tsconfig.json
@@ -5,7 +5,7 @@
     "moduleResolution": "node",
     "noEmit": true,
     "paths": {
-      "@/*": ["../catppuccin-vsc/src/*"]
+      "@/*": ["../tsdevau-catppuccin-vsc/src/*"]
     },
     "resolveJsonModule": true
   }
