fix(publisher): update publisher details and schema references
- change publisher from `tsdevau` to `tpsTech`
- update schema references to v3.17.1
- add publisherId to metadata

--- a/packages/tsdevau-catppuccin-vsc-pack/package.json
+++ b/packages/tsdevau-catppuccin-vsc-pack/package.json
@@ -3,7 +3,7 @@
   "description": "Soothing pastel theme based on Catppuccin with adjusted syntax highlighting for VSCode",
   "version": "1.0.2",
   "displayName": "tsdevau-Catppuccin Pack",
-  "publisher": "tsdevau",
+  "publisher": "tpsTech",
   "icon": "icon.png",
   "private": true,
   "repository": {
