--- a/packages/tsdevau-catppuccin-vsc/package.json
+++ b/packages/tsdevau-catppuccin-vsc/package.json
@@ -3,7 +3,7 @@
   "license": "MIT",
   "private": true,
   "displayName": "tsdevau-Catppuccin for VSCode",
-  "publisher": "tsdevau",
+  "publisher": "tpsTech",
   "description": "Soothing pastel theme based on Catppuccin with adjusted syntax highlighting for VSCode",
   "version": "3.17.1",
   "type": "module",
@@ -78,14 +78,14 @@
           "type": "object",
           "default": {},
           "markdownDescription": "Custom color overrides. Assign your own hex codes to palette colors. See [the docs](https://github.com/catppuccin/vscode#override-palette-colors) for reference.",
-          "$ref": "https://esm.sh/gh/catppuccin/vscode@catppuccin-vsc-v3.17.0/packages/catppuccin-vsc/schemas/colorOverrides.schema.json"
+          "$ref": "https://esm.sh/gh/catppuccin/vscode@catppuccin-vsc-v3.17.1/packages/catppuccin-vsc/schemas/colorOverrides.schema.json"
         },
         "tsdevau-catppuccin.customUIColors": {
           "scope": "application",
           "type": "object",
           "default": {},
           "markdownDescription": "Customize UI colors. Map `workbench.colorCustomizations` to palette colors. See [the docs](https://github.com/catppuccin/vscode#use-palette-colors-on-workbench-elements-ui) for reference.",
-          "$ref": "https://esm.sh/gh/catppuccin/vscode@catppuccin-vsc-v3.17.0/packages/catppuccin-vsc/schemas/customUIColors.schema.json"
+          "$ref": "https://esm.sh/gh/catppuccin/vscode@catppuccin-vsc-v3.17.1/packages/catppuccin-vsc/schemas/customUIColors.schema.json"
         },
         "tsdevau-catppuccin.accentColor": {
           "scope": "application",
@@ -168,7 +168,8 @@
   },
   "icon": "icon.png",
   "__metadata": {
-    "publisherDisplayName": "tsdevau",
+    "publisherDisplayName": "tpsTech",
+    "publisherId": "tpsTech",
     "isPreReleaseVersion": false
   },
   "devDependencies": {
