--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,10 +20,10 @@ jobs:
         run: pnpm lint
 
       - name: Build
-        run: pnpm --filter tsdevau-catppuccin-vsc core:build
+        run: pnpm --filter tpstech-catppuccin-vsc core:build
 
       - name: Upload Artifact
         uses: actions/upload-artifact@b4b15b8c7c6ac21ea08fcf65892d2ee8f75cf882 # v4
         with:
-          name: tsdevau-catppuccin-vsc-${{ github.sha }}
-          path: packages/tsdevau-catppuccin-vsc/tsdevau-catppuccin-*.vsix
+          name: tpstech-catppuccin-vsc-${{ github.sha }}
+          path: packages/tpstech-catppuccin-vsc/tpstech-catppuccin-*.vsix
