--- a/packages/tpstech-catppuccin-vsc-pack/package.json
+++ b/packages/tpstech-catppuccin-vsc-pack/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "tsdevau-catppuccin-vsc-pack",
+  "name": "tpstech-catppuccin-vsc-pack",
   "description": "Soothing pastel theme based on Catppuccin with adjusted syntax highlighting for VSCode",
   "version": "1.0.2",
-  "displayName": "tsdevau-Catppuccin Pack",
+  "displayName": "Catppuccin by tpsTech Pack",
   "publisher": "tpsTech",
   "icon": "icon.png",
   "private": true,
   "repository": {
     "type": "git",
     "url": "https://github.com/tsdevau/catppuccin-vscode.git",
-    "directory": "packages/tsdevau-catppuccin-vsc-pack"
+    "directory": "packages/tpstech-catppuccin-vsc-pack"
   },
   "engines": {
     "vscode": "^1.70.0",
@@ -26,7 +26,7 @@
     "@vscode/vsce": "catalog:"
   },
   "scripts": {
-    "pack:build": "vsce package --no-dependencies --out tsdevau-catppuccin-vsc-pack.vsix"
+    "pack:build": "vsce package --no-dependencies --out tpstech-catppuccin-vsc-pack.vsix"
   },
   "license": "MIT",
   "homepage": "https://github.com/tsdevau/catppuccin-vscode",
