--- a/packages/tpstech-catppuccin-vsc-storybook/package.json
+++ b/packages/tpstech-catppuccin-vsc-storybook/package.json
@@ -16,7 +16,7 @@
     "storybook": "^8.6.7",
     "vite": "^6.0.0",
     "@catppuccin/palette": "catalog:",
-    "tsdevau-catppuccin-vscode": "workspace:*",
+    "tpstech-catppuccin-vscode": "workspace:*",
     "@tsconfig/node22": "catalog:",
     "@types/node": "catalog:",
     "eslint": "catalog:",
@@ -24,7 +24,7 @@
     "typescript": "catalog:"
   },
   "scripts": {
-    "storybook:build": "pnpm --filter tsdevau-catppuccin-vsc core:build && storybook build",
+    "storybook:build": "pnpm --filter tpstech-catppuccin-vsc core:build && storybook build",
     "storybook:dev": "storybook dev -p 6006"
   },
   "engines": {
@@ -33,7 +33,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/tsdevau/catppuccin-vscode.git",
-    "directory": "packages/tsdevau-catppuccin-vsc-storybook"
+    "directory": "packages/tpstech-catppuccin-vsc-storybook"
   },
   "homepage": "https://github.com/tsdevau/catppuccin-vscode",
   "bugs": {
