--- a/packages/tpstech-catppuccin-vscode/package.json
+++ b/packages/tpstech-catppuccin-vscode/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tsdevau-catppuccin-vscode",
+  "name": "tpstech-catppuccin-vscode",
   "version": "3.17.1",
   "description": "Soothing pastel theme based on Catppuccin with adjusted syntax highlighting for VSCode",
   "license": "MIT",
@@ -10,7 +10,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/tsdevau/catppuccin-vscode.git",
-    "directory": "packages/tsdevau-catppuccin-vscode"
+    "directory": "packages/tpstech-catppuccin-vscode"
   },
   "files": [
     "dist/*",
@@ -35,7 +35,7 @@
   "devDependencies": {
     "@tsconfig/node22": "catalog:",
     "@types/node": "catalog:",
-    "tsdevau-catppuccin-vsc": "workspace:*",
+    "tpstech-catppuccin-vsc": "workspace:*",
     "tsup": "catalog:",
     "typescript": "catalog:"
   },
@@ -45,7 +45,7 @@
   "scripts": {
     "build": "pnpm tsup",
     "compiled:pack": "pnpm pack",
-    "prepack": "pnpm --filter tsdevau-catppuccin-vsc core:build && pnpm build"
+    "prepack": "pnpm --filter tpstech-catppuccin-vsc core:build && pnpm build"
   },
   "homepage": "https://github.com/tsdevau/catppuccin-vscode",
   "bugs": {
